# Camera

./: .gitignore  .gitmodules  CMakeLists.txt  Comands.http  Driver.http  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig_orig  test.http
main/: CMakeLists.txt  Httpd.c  app_camera.c  app_httpd.c  app_illuminator.c  app_main.c  app_settings.c  app_sntp.c  app_wifi.c  cameraIlluminator.c  cameraMain.c  cameraSetup.c  cameraSntp.c  cameraWifi.c  gDriverHttp.cpp  settings.c  wifi.c
main/gdriver/: Constants.h  GDriverToken.cpp  GDriverToken.h  HttpClient.cpp  HttpClient.h  HttpData.cpp  HttpData.h  TokenCreation.cpp  TokenCreation.h  delete_unique_ptr.h  gDriveMethods.cpp  gDriveMethods.h  gDriverMethods.cpp  gDriverMethods.h
main/include/: GroupSignals.h  Pins.h  app_camera.h  app_illuminator.h  app_settings.h  cameraWifi.h  gDriverHttp.h  gdriver.h  settings.h
